changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

common/readable.c: Fix possible memory leak when reading the 'bookarch'
 file.
Andreas Kirschbaum 2008-11-20

common/readable.c: Fix 'messages' file parser to strip leading spaces but
 not trailing spaces. Issue warning messages if messages are truncated.
 Detect and report syntax errors rather than crash.
common/readable.c: Fix incorrect random expression -- condition was always
 false.
socket/image.c: Accelerate "replyinfo image_sums" processing.
doc/Developers/protocol: Fix documentation for "replyinfo image_sums"
 format.
Andreas Kirschbaum 2008-11-19

socket/request.c, doc/Developers/protocol: Properly check "setup"
 settings; document allowed values.
socket/request.c: Properly check input read from client socket.
Andreas Kirschbaum 2008-11-18

Apply patch #2305993: Random Item generation difficutly table expansion,
courtesy meflin.
 common/treasure.c
 include/treasure.h
Nicolas Weeger 2008-11-17

Allow transports to not occupy the same spaces depending on the facing direction.
 common/map.c: tweak various move_type checks for transport
 doc/Developers/objects: update with special flag
 server/player.c: special handling for transport facings
Nicolas Weeger 2008-11-16

Reduce selling cost of Gourmet Mushrooms.  They were to easy to exploit
and abuse for massive cash influx. Requested change by meflin.
 /lib/artifacts
Rick Tanner 2008-11-11

Tentative fix for bug #1982043: Ruggilli immolation.
 server/disease.c: don't remove god-diven diseases.
Nicolas Weeger 2008-11-11

Fix for bug #2259992: I dont know how to apply the ... * (unpaid).